--- a/src/views/devicemanage.html
+++ b/src/views/devicemanage.html
@@ -33,31 +33,15 @@
                                 placeholder="请选择">
                                 <el-option label="设备分类名称" value="machineName"></el-option>
                                 <el-option label="报修分类名" value="repairsName"></el-option>
-                                <el-option label="报修类型名" value="repairsTypeName"></el-option>
                             </el-select>
                         </el-input>
-
-                        <div class="_search_centent" v-show="more">
-                            <el-button>状态</el-button>
-                            <el-select v-model="listSearch.status" slot="prepend" placeholder="请选择">
-                                <el-option label="不限" value=""></el-option>
-                                <el-option label="冻结" value="0"></el-option>
-                                <el-option label="正常" value="1"></el-option>
-                            </el-select>
-                        </div>
-                        <div class="more_search el-icon-circle-plus-outline" v-show="!more" @click="more = !more">
-                            更多搜索条件
-                        </div>
-                        <div class="more_search el-icon-remove-outline" v-show="more" @click="more = !more"> 收起 </div>
 
                         <el-button icon="el-icon-search" class="_search_btn" @click="list(listSearch)">搜索
                         </el-button>
                     </el-form>
                     <template>
                         <el-table :data="tableData" stripe style="width: 100%" border>
-                            <el-table-column prop="repairsName" label="报修分类名"></el-table-column>
-                            <el-table-column prop="repairsTypeName" label="报修类型名"></el-table-column>
-                            <el-table-column prop="machineName" label="已绑定的设备类型名"></el-table-column>
+                            <el-table-column prop="repairsTypeName" label="报修分类名"></el-table-column>
                             <el-table-column prop="needFaultContent" label="是否需要填写故障描述">
                                 <template slot-scope="scope">
                                     <div :class="scope.row.needFaultContent == 1 ? 'green' : 'ccc'">
@@ -86,13 +70,13 @@
                                     </div>
                                 </template>
                             </el-table-column>
-                            <el-table-column prop="status" label="状态">
+                            <!-- <el-table-column prop="status" label="状态">
                                 <template slot-scope="scope">
                                     <div :class="scope.row.status == 1 ? 'green': 'red'">
                                         {{ scope.row.status == 1 ? '正常' : '冻结' }}
                                     </div>
                                 </template>
-                            </el-table-column>
+                            </el-table-column> -->
                             <el-table-column prop="sort" label="排序号"></el-table-column>
                             <el-table-column prop="createTime" label="创建时间">
                                 <template slot-scope="scope">
@@ -103,12 +87,12 @@
 
                             <el-table-column fixed="right" label="操作">
                                 <template slot-scope="scope">
-                                    <el-button type="text" size="small" @click="devicemachineDest(scope.row)">
+                                    <el-button type="text" size="small" @click="option = [];tableDatas = [];devicemachineDest(scope.row)">
                                         详情
                                     </el-button>
-                                    <el-button type="text" size="small" @click="pullblack({URL: 'repairs_type_block', NUMBER: scope.row.repairsTypeId , TAG: 'repairsTypeId'})">
+                                    <!-- <el-button type="text" size="small" @click="pullblack({URL: 'repairs_type_block', NUMBER: scope.row.repairsTypeId , TAG: 'repairsTypeId'})">
                                         {{ scope.row.status != 1 ? '正常' : '冻结' }}
-                                    </el-button>
+                                    </el-button> -->
                                     <el-button type="text" size="small"
                                         @click="deletedata({URL: 'delete_repairs_type', TAG: 'repairsTypeId', NUMBER: scope.row.repairsTypeId })">
                                         删除
@@ -128,15 +112,15 @@
                         <el-form :model="formData" label-width="100px">
                             
                             <el-form-item label="报修分类名">
-                                <el-input v-model="formData.repairsName"></el-input>
+                                <el-input v-model="formData.repairsTypeName"></el-input>
                             </el-form-item>
 
-                            <el-form-item label="报修类型名">
+                            <!-- <el-form-item label="报修类型名">
                                 <el-input v-model="formData.repairsTypeName "></el-input>
-                            </el-form-item>
+                            </el-form-item> -->
 
                             <el-form-item label="排序">
-                                <el-input v-model="formData.sort"></el-input>
+                                <el-input v-model="formData.sort" type="number"></el-input>
                             </el-form-item>
 
                             <el-form-item label="是否需要选择需求内容">
@@ -160,12 +144,12 @@
                                 </el-radio-group>
                             </el-form-item>
 
-                            <el-form-item label="状态">
+                            <!-- <el-form-item label="状态">
                                 <el-radio-group v-model="formData.status">
                                     <el-radio :label="1">正常</el-radio>
                                     <el-radio :label="0">冻结</el-radio>
                                 </el-radio-group>
-                            </el-form-item>
+                            </el-form-item> -->
 
                             <el-form-item label="是否需要支付">
                                 <el-radio-group v-model="formData.needPay">
@@ -174,7 +158,7 @@
                                 </el-radio-group>
                             </el-form-item>
 
-                            <el-form-item label="设备分类" prop="machineId">
+                            <!-- <el-form-item label="设备分类" prop="machineId">
                                 <el-table :data="tableDatass" @current-change="getTemplateRow"
                                 tooltip-effect="dark" height="300px">
                                     <el-table-column width="55">
@@ -185,24 +169,18 @@
                                     <el-table-column prop="machineName" label="设备分类名"></el-table-column>
                                     <el-table-column prop="machineContent" label="分类说明"></el-table-column>
                                 </el-table>
-                            </el-form-item>
+                            </el-form-item> -->
 
-                            <el-form-item label="需求类型" prop="demandIds">
+                            <el-form-item label="需求分类" prop="demandIds">
                                 <el-table :data="option" @selection-change="handleSelectionChange" 
                                 tooltip-effect="dark" ref="multipleTable" height="300px">
                                     <el-table-column type="selection" width="55"></el-table-column>
-                                    <el-table-column prop="demandName" label="名称"></el-table-column>
-                                    <el-table-column prop="demandTypeName" label="需求类型名"></el-table-column>
-                                    <el-table-column prop="isMultiple" label="多选">
-                                        <template slot-scope="scope">
-                                            {{ scope.row.isMultiple == 1 ? '是' : "否" }}
-                                        </template>
-                                    </el-table-column>
+                                    <el-table-column prop="demandTypeName" label="需求名称"></el-table-column>
                         </el-table-column>
                                 </el-table>
                             </el-form-item>
 
-                            <el-form-item label="报价说明" prop="machineOfferExplainId">
+                            <el-form-item label="报价参考" prop="machineOfferExplainId">
                                 <el-table :data="tableDatas" @current-change="getTemplateRows"
                                 tooltip-effect="dark" height="300px">
                                     <el-table-column label="选择" width="55">
@@ -210,12 +188,9 @@
                                             <el-radio  v-model="tableRadios" :label="scope.row"><i></i></el-radio>
                                         </template>
                                     </el-table-column>
-                                    <el-table-column prop="repairsName" label="名称"></el-table-column>
-                                    <el-table-column prop="repairsTypeName" label="类型"></el-table-column>
-                                    <el-table-column prop="repairsName" label="类型名称"></el-table-column>
-                                    <el-table-column prop="offerContent" label="说明" :show-overflow-tooltip="true">
+                                    <el-table-column prop="title" label="说明" :show-overflow-tooltip="true">
                                         <template slot-scope="scope">
-                                            {{ scope.row.offerContent == -1 ? '无' : scope.row.offerContent }}
+                                            {{ scope.row.title == -1 ? '无' : scope.row.title }}
                                         </template>
                                     </el-table-column>
                                 </el-table>
